# UnderSounds

./: README.md
servidor_fastapi/: .dockerignore  .gitignore  Dockerfile  docker-compose.yaml  main.py  openapi.yaml  requirements.txt  setup.cfg
servidor_fastapi/.openapi-generator/: FILES
servidor_fastapi/controller/: auth.py  auth_api.py  auth_api_base.py  auth_api_impl.py  carrito.py  pago.py  perfil.py  productos.py
servidor_fastapi/model/: __init__.py  model.py
servidor_fastapi/model/dao/: db_connection.py  exceptions.py  init__db.py  initial_data.json  midb.sqlite3  schema.sql  test_db.py
servidor_fastapi/model/dto/: __init__.py  add_to_cart_input.py  auth_login_post200_response.py  cart_item.py  checkout_input.py  forum.py  product.py  purchase.py  user_login_input.py  user_profile.py  user_register_input.py
servidor_fastapi/security/: security_api.py
servidor_fastapi/tests/: test_auth_api.py  test_cart_api.py  test_checkout_api.py  test_forum_api.py  test_products_api.py  test_profile_api.py  test_user_dao.py
servidor_fastapi/view/: view.py
servidor_fastapi/view/templates/: carrito1_Artista.html  carrito1_NoLog.html  carrito1_Usuario.html  descripcion_Disco_Artista.html  descripcion_Disco_NoLog.html  descripcion_Disco_Usuario.html  enDesarrollo.html  footer.html  header1_Artista.html  header1_NoLog.html  header1_Usuario.html  loginLog.html  menuPoductos_Artistas.html  pag_camisetas_Artista.html  pag_camisetas_NoLog.html  pag_camisetas_Usuario.html  pag_cassettes_Artista.html  pag_cassettes_NoLog.html  pag_cassettes_Usuario.html  pag_cds_NoLog.html  (+23 more)
(+63 files in other folders)
