[metadata]
name = openapi_server
version = 1.0.0
description = API para gestionar usuarios (no logeados, logueados, artista), productos y compras.
long_description = file: README.md
keywords = OpenAPI Music E-Commerce API
python_requires = >= 3.7.*
classifiers =
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7

[options]
install_requires = fastapi[all]
setup_requires = setuptools
package_dir = =src
packages = find_namespace:

[options.packages.find]
where = src
